--- a/calc/src/app/app.component.css
+++ b/calc/src/app/app.component.css
@@ -1,4 +1,7 @@
 div {
     border: 5px outset red;
-    background-color: lightblue;
-    text-align: center;}
+    background: rgb(63,94,251);
+    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(242,130,140,0.8127626050420168) 100%);
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
